     headers are not sent.
   trust_id_outbound=yes - RPID/PAI headers are applied with the full remote
     party information in tact even for prohibited callingpres information.
     In the case of PAI, a Privacy: id header will be appended for prohibited
     calling information to communicate that the private information should
     not be relayed to untrusted parties.

------------------------------------------------------------------------------
--- Functionality changes from Asterisk 12.1.0 to Asterisk 12.2.0 ------------
------------------------------------------------------------------------------

Core
------------------
 * Exposed sorcery-based configuration files like pjsip.conf to dialplans via
   the new AST_SORCERY diaplan function.

ARI
------------------
 * The live recording object on recording events now contains a target_uri
   field which contains the URI of what is being recorded.

 * The bridge type used when creating a bridge is now a comma separated list of
   bridge properties. Valid options are: mixing, holding, dtmf_events, and
   proxy_media.

 * A channelId can now be provided when creating a channel, either in the
   uri (POST channels/my-channel-id) or as query parameter.  A local channel
   will suffix the second channel id with ';2' unless provided as query
   parameter otherChannelId.

 * A bridgeId can now be provided when creating a bridge, either in the uri
   (POST bridges/my-bridge-id) or as a query parameter.

 * A playbackId can be provided when starting a playback, either in the uri
   (POST channels/my-channel-id/play/my-playback-id /
    POST bridges/my-bridge-id/play/my-playback-id)  or as a query parameter.

 * A snoop channel can be started with a snoopId, in the uri or query.

AMI
------------------
 * Originate now takes optional parameters ChannelId and OtherChannelId,
   used to set the UniqueId on creation.  The other id is assigned to the
   second channel when dialing LOCAL, or defaults to appending ;2 if only